--- a/dutch economical units/README
+++ b/dutch economical units/README
@@ -14,10 +14,10 @@ cv prepress/it :    - kabk - graphics design - prinsessegracht den haag (1988/89
                     - aramco overseas company - eu datacenter - schuttersveld leiden (2002) 
                       (laatste salaris brutto 5300,00 per maand)
 
-2002           :    https://nl.wikipedia.org/wiki/Uitvoeringsinstituut_Werknemersverzekeringen
-2003-2015      :    https://nl.wikipedia.org/wiki/Wet_werk_en_bijstand
+2002      uwv   :   https://nl.wikipedia.org/wiki/Uitvoeringsinstituut_Werknemersverzekeringen
+2003/2015 sozawe:   https://nl.wikipedia.org/wiki/Wet_werk_en_bijstand
 
-tot 2007       :    gedeelde studenten etage coolhaven 153b rotterdam
+tot 2007       :    coolhaven 153b rotterdam (gedeelde studenten etage)
 
 2007-2016      :    inschrijving in de gemeente rotterdam
                     lipsch hth
