--- a/dutch economical units/README
+++ b/dutch economical units/README
@@ -5,47 +5,47 @@
 'leefgeld' 
 
 
-cv prepress/it :    - kabk - graphics design - prinsessegracht den haag (1988/89)
+cv prepress/it  :   - kabk - graphics design - prinsessegracht den haag (1988/89)
                     - drukkrij de zaak - agniessenstraat rotterdam (1990) 
                     - fige productions dtp vormgeving - westvest schiedam
                     - uitgeverij verkouteren - industriegebouw goudsesingel rotterdam
                     - frederik kazerne - graphics department - van alkemadelaan den haag
                     - agfa gevaert benelux - prepress/medical imaging (deelgebouw nfi) - rijswijk 
                     - aramco overseas company - eu datacenter - schuttersveld leiden (2002) 
-                      (laatste salaris brutto 5300,00 per maand)
+                       (laatste salaris brutto 5300,00 per maand)
 
 2002      uwv   :   https://nl.wikipedia.org/wiki/Uitvoeringsinstituut_Werknemersverzekeringen
 2003/2015 sozawe:   https://nl.wikipedia.org/wiki/Wet_werk_en_bijstand
 
-tot 2007       :    coolhaven 153b rotterdam (gedeelde studenten etage)
+tot 2007        :   coolhaven 153b rotterdam (gedeelde studenten etage)
 
-2007-2016      :    inschrijving in de gemeente rotterdam
+2007-2016       :   inschrijving in de gemeente rotterdam
                     lipsch hth
                     1966-10-29
                     BSN 158143735
 
-verhuurder     :    woonbron
+verhuurder      :   woonbron
                     € 437,72 
                     https://nl.wikipedia.org/wiki/Coolhaveneiland
                     willem buytewechstraat 240
                     3024VM Rotterdam
                  
-uitspraak      :    zaaknummer ZKN-2014-002098
+uitspraak       :   zaaknummer ZKN-2014-002098
                     https://nl.wikipedia.org/wiki/Huurcommissie
 
-uitkering      :    sozawe consulent sanders
+uitkering       :   sozawe consulent sanders
                     toekenning uitkering en huisinrichtingskosten willem buytewechstraat 240
                     https://nl.wikipedia.org/wiki/Wet_werk_en_bijstand
                     € 870,00
 
-huurtoeslag    :    € 200,00
+huurtoeslag     :   € 200,00
               
-zorgtoeslag    :    €  86,00
+zorgtoeslag     :   €  86,00
 
 
-bitcoin-dev    :    gnaf@riseup.net
-wif            :    https://en.bitcoin.it/wiki/Wallet_import_format
-google         :    1AVE6bvAUgj8FvsS6PTCY2vAL2cuj4Fz2J
+bitcoin-dev     :   gnaf@riseup.net
+wif             :   https://en.bitcoin.it/wiki/Wallet_import_format
+                    1AVE6bvAUgj8FvsS6PTCY2vAL2cuj4Fz2J
 
                  
 ------------------------
