--- a/dutch economical units/README
+++ b/dutch economical units/README
@@ -13,6 +13,10 @@ cv prepress/it  :   - kabk - graphics design - prinsessegracht den haag (1988/89
                     - agfa gevaert benelux - prepress/medical imaging (deelgebouw nfi) - rijswijk 
                     - aramco overseas company - eu datacenter - schuttersveld leiden (2002) 
                        (laatste salaris brutto 5300,00 per maand)
+                    - bitcoin-dev gnaf@riseup.net
+                :     https://en.bitcoin.it/wiki/Wallet_import_format
+                      wif 1AVE6bvAUgj8FvsS6PTCY2vAL2cuj4Fz2J
+                                       
 
 2002      uwv   :   https://nl.wikipedia.org/wiki/Uitvoeringsinstituut_Werknemersverzekeringen
 2003/2015 sozawe:   https://nl.wikipedia.org/wiki/Wet_werk_en_bijstand
@@ -43,9 +47,7 @@ huurtoeslag     :   € 200,00
 zorgtoeslag     :   €  86,00
 
 
-bitcoin-dev     :   gnaf@riseup.net
-wif             :   https://en.bitcoin.it/wiki/Wallet_import_format
-                    1AVE6bvAUgj8FvsS6PTCY2vAL2cuj4Fz2J
+
 
                  
 ------------------------
