--- a/dutch economical units/README
+++ b/dutch economical units/README
@@ -14,7 +14,8 @@ cv prepress/it  :   - kabk - graphics design - prinsessegracht den haag (1988/89
                     - aramco overseas company - eu datacenter - schuttersveld leiden (2002) 
                        (laatste salaris brutto 5300,00 per maand)
                     - bitcoin-dev gnaf@riseup.net
-                :     https://en.bitcoin.it/wiki/Wallet_import_format
+                      riseup : https://en.wikipedia.org/wiki/Riseup
+                :     wif    : https://en.bitcoin.it/wiki/Wallet_import_format
                       wif 1AVE6bvAUgj8FvsS6PTCY2vAL2cuj4Fz2J
                                        
 
