--- a/dutch economical units/README
+++ b/dutch economical units/README
@@ -16,7 +16,7 @@ cv prepress/it  :   - kabk - graphics design - prinsessegracht den haag (1988/89
                     - bitcoin-dev gnaf@riseup.net
                       riseup : https://en.wikipedia.org/wiki/Riseup
                 :     wif    : https://en.bitcoin.it/wiki/Wallet_import_format
-                      wif 1AVE6bvAUgj8FvsS6PTCY2vAL2cuj4Fz2J
+                               1AVE6bvAUgj8FvsS6PTCY2vAL2cuj4Fz2J
                                        
 
 2002      uwv   :   https://nl.wikipedia.org/wiki/Uitvoeringsinstituut_Werknemersverzekeringen
