--- a/dutch economical units/README
+++ b/dutch economical units/README
@@ -48,10 +48,11 @@ huurtoeslag     :   € 200,00
               
 zorgtoeslag     :   €  86,00
 
----------------------------
- ing bank account abstract 
- lipsch hth            
----------------------------
+------------------------------
+|         abstract           |
+| ing bankaccount lipsch hth |           
+------------------------------
+
 // 2014
 // socialedienst rotterdam
 
