--- a/dutch economical units/README
+++ b/dutch economical units/README
@@ -48,6 +48,9 @@ huurtoeslag     :   € 200,00
               
 zorgtoeslag     :   €  86,00
 
+condition       :   https://en.wikipedia.org/wiki/Neuroleptic_malignant_syndrome
+                    https://en.wikipedia.org/wiki/Neurodegeneration         
+
 ------------------------------
 |         abstract           |
 | ing bankaccount lipsch hth |           
