--- a/dutch economical units/README
+++ b/dutch economical units/README
@@ -14,10 +14,10 @@ cv prepress/it  :   - kabk - graphics design - prinsessegracht den haag (1988/89
                     - aramco overseas company - eu datacenter - schuttersveld leiden (2002) 
                        (laatste salaris brutto 5300,00 per maand)
                     - bitcoin-dev gnaf@riseup.net
-                      riseup : https://en.wikipedia.org/wiki/Riseup
-                :     wif    : https://en.bitcoin.it/wiki/Wallet_import_format
-                      code   : https://github.com/Gnaf/Bitcoin-addressGen-WIF
-                               https://github.com/bitcoin/bitcoin/pull/220
+                      riseup      https://en.wikipedia.org/wiki/Riseup
+                :     wif         https://en.bitcoin.it/wiki/Wallet_import_format
+                      code        https://github.com/Gnaf/Bitcoin-addressGen-WIF
+                                  https://github.com/bitcoin/bitcoin/pull/220
                                       
 
 2002      uwv   :   https://nl.wikipedia.org/wiki/Uitvoeringsinstituut_Werknemersverzekeringen
