--- a/dutch economical units/README
+++ b/dutch economical units/README
@@ -12,7 +12,7 @@ cv prepress/it  :   - kabk - graphics design - prinsessegracht den haag (1988/89
                     - frederik kazerne - graphics department - van alkemadelaan den haag
                     - agfa gevaert benelux - prepress/medical imaging (deelgebouw nfi) - rijswijk 
                     - aramco overseas company - eu datacenter - schuttersveld leiden (2002) 
-                       (laatste salaris brutto 5300,00 per maand)
+                      (laatste salaris in 2002 brutto 5300,00 per maand)
                     - bitcoin-dev gnaf@riseup.net
                       riseup      https://en.wikipedia.org/wiki/Riseup
                 :     wif         https://en.bitcoin.it/wiki/Wallet_import_format
