--- a/README
+++ b/README
@@ -5,6 +5,9 @@
 'leefgeld'
 
 
+# social choice theory
+https://en.wikipedia.org/wiki/Social_choice_theory
+
 # nederland
 https://nl.wikipedia.org/wiki/Nederland
 
