--- a/dutch economical units/README
+++ b/dutch economical units/README
@@ -2,7 +2,7 @@
 | lipsch hth |
 --------------
 
-'leefgeld' 
+'deterministic' 
 
 
 cv prepress/it  :   - kabk - graphics design - prinsessegracht den haag (1988/89)
